Updated Debian Info

--- a/Distributions.mw
+++ b/Distributions.mw
@@ -97,19 +97,19 @@ Debian Linux, the whole distribution, on a mobile phone.
 {| border=1 width=100% |
 | width=14%| || width=14%|2007.2 || width=14%|FSO || width=14%|Om2008.8 || width=14%|SHR || width=14%|Qtopia || Debian
 |-
-| Telephony || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || ??
+| Telephony || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
 |-
-| SMS || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || ??
+| SMS || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
 |-
-| GPRS || Not through UI || Not through UI || Not through UI || N/A || No (3) || ??
+| GPRS || Not through UI || Not through UI || Not through UI || N/A || No (3) || style="background:lightgreen;" | Yes
 |-
 | WiFi || style="background:lightgreen;" | Yes || Not through UI || style="background:lightgreen;" | Yes (*) || N/A || style="background:lightgreen;" | Yes ||style="background:lightgreen;" | Yes
 |-
-| VoIP || ?? || ?? || ?? || ?? || ?? || ??
+| VoIP || ?? || ?? || ?? || ?? || ?? || style="background:lightgreen;" | Yes
 |-
-| Bluetooth || style="background:lightgreen;" | Yes || No || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || ??
+| Bluetooth || style="background:lightgreen;" | Yes || No || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
 |-
-| GPS || style="background:lightgreen;" | Yes (1) || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes (1) || N/A || No || ??
+| GPS || style="background:lightgreen;" | Yes (1) || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes (1) || N/A || No || style="background:lightgreen;" | Yes
 |-
 |}
 
@@ -118,11 +118,11 @@ Debian Linux, the whole distribution, on a mobile phone.
 {| border=1 width=100% |
 | width=14%| || width=14%|2007.2 || width=14%|FSO || width=14%|Om2008.8 || width=14%|SHR || width=14%|Qtopia || Debian
 |-
-| Stylus friendly || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || ??
+| Stylus friendly || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
 |-
-| Finger friendly || Partially || Partially || Partially || N/A || style="background:lightgreen;" | Yes || ??
+| Finger friendly || Partially || Partially || Partially || N/A || style="background:lightgreen;" | Yes || No
 |-
-| Accelerometer || No || No || No || N/A || No || ??
+| Accelerometer || No || No || No || N/A || No || No
 |-
 |}
 
@@ -133,17 +133,17 @@ Debian Linux, the whole distribution, on a mobile phone.
 |-
 | Terminal || Basic (2) || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes (1) || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
 |-
-| PIM || style="background:lightgreen;" | Yes || No || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || ??
+| PIM || style="background:lightgreen;" | Yes || No || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
 |-
-| Phonebook || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || ??
+| Phonebook || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
 |-
-| Dialer || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || ??
+| Dialer || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
 |-
-| Web Browser || style="background:lightgreen;" | Yes (1) || ? || style="background:lightgreen;" | Yes (1) || ? || No || ?
+| Web Browser || style="background:lightgreen;" | Yes (1) || ? || style="background:lightgreen;" | Yes (1) || ? || No || style="background:lightgreen;" | Yes
 |-
-| Mail Client || ? || ? || ? || ? || style="background:lightgreen;" | Yes || ?
+| Mail Client || ? || ? || ? || ? || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
 |-
-| XMPP Client || style="background:lightgreen;" | Yes (1) || ? || ? || ? || No || ?
+| XMPP Client || style="background:lightgreen;" | Yes (1) || ? || ? || ? || No || style="background:lightgreen;" | Yes
 |-
 |}
 
@@ -151,15 +151,15 @@ Debian Linux, the whole distribution, on a mobile phone.
 {| border=1 width=100% |
 | width=14%| || width=14%|2007.2 || width=14%|FSO || width=14%|Om2008.8 || width=14%|SHR || width=14%|Qtopia || Debian
 |-
-| GTK+ || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || No || ??
+| GTK+ || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || No || style="background:lightgreen;" | Yes
 |-
-| QT/Qtopia || No || style="background:lightgreen;" | Yes? || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes? || style="background:lightgreen;" | Yes || ??
+| QT/Qtopia || No || style="background:lightgreen;" | Yes? || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes? || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
 |-
-| Middleware || gsmd/neod || freesmartphone.org || qtopia-x11 || freesmartphone.org || qtopia || ??
+| Middleware || gsmd/neod || freesmartphone.org || qtopia-x11 || freesmartphone.org || qtopia || freesmartphone.org
 |-
-| [[Java]] || Jalimo || ? || ? || ? || ? || ??
+| [[Java]] || Jalimo || ? || ? || ? || ? || style="background:lightgreen;" | Yes
 |-
-| [[Python]] || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || ? || style="background:lightgreen;" | Yes || ??
+| [[Python]] || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || ? || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
 |-
 |}
 
