--- a/Openmoko_Taiwan.mw
+++ b/Openmoko_Taiwan.mw
@@ -79,7 +79,7 @@ Email：chelsea@openmoko.com
 
 ==Openmoko 學校課程==
 
-想要知道下學期有哪些學校可以上到 Openmoko 手機課程嗎？我們即將為您發佈 Openmoko 開課資訊。
+想要知道下學期有哪些學校可以上到 Openmoko 手機課程嗎？我們即將為您發佈 Openmoko 開課資訊。Openmoko 開始在台灣的大專院校尋找新一代的 open source developer，並積極與學校建立互動關係。
 
 ==清大資工參訪日-2008/04/01==
 
