*Empty MediaWiki Message*

--- a/Main_Page%2Fzh_tw.mw
+++ b/Main_Page%2Fzh_tw.mw
@@ -14,7 +14,7 @@ __NOTOC__
 </div>
 
 |}
-<b><font color=426fdc>▲ 獲取 Openmoko 在台灣活動相關之資訊</font></B>
+<b><font color=426fdc>▲ 獲取 Openmoko 在台灣相關資訊</font></B>
 </div>
 
 
