--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -1939,6 +1939,12 @@ Due to common customs problems we created google group to discuss how to get tha
 | 0
 | 1(P4.9)
 |-
+| 50. [[Special:Emailuser/Voldmeister|Voldmeister]]
+| Dmitry Grekhnyov
+| 1(P4.10)
+| 0
+| 0 (Жду объявления цены)
+|-
 
 |Total number:
 |
