--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -1941,9 +1941,9 @@ Due to common customs problems we created google group to discuss how to get tha
 |-
 | 50. [[Special:Emailuser/Voldmeister|Voldmeister]]
 | Dmitry Grekhnyov
-| 1(P4.10)
-| 0
-| 0 (Жду объявления цены)
+| 0(1)
+| 0(1)
+| 0(1) (Жду объявления цены)
 |-
 
 |Total number:
