/* Quoi de neuf */

--- a/Om_2008.8%2Ffr.mw
+++ b/Om_2008.8%2Ffr.mw
@@ -33,7 +33,7 @@
 == Quoi de neuf ==
 '''Om 2008.8''' a été créé pour être vide, afin d'offrir une vitrine pour vos idées.
 
-Pensez à vos créations comme des galeries. Nous en construisons l'environnement. Chacune différente de la suivante. Vous pourrez prendre la liberté d'imaginer la votre parce que nous voulous que vous ajoutiez votre touche. Au choix : vous pouvez utiliser, créer ou les deux.
+Pensez à vos créations comme des galeries. Nous en construisons l'environnement. Chacune différente de la suivante. Vous pourrez prendre la liberté d'imaginer la votre parce que nous voulons que vous ajoutiez votre touche. Au choix : vous pouvez utiliser, créer ou les deux.
 
 Peu importe le chemin, vous créez à votre image. C'est à votre sujet.
 
@@ -41,7 +41,7 @@ Peu importe le chemin, vous créez à votre image. C'est à votre sujet.
 
 '''Om 2008.8''' vous permet de personnaliser votre Neo dans beaucoup d'aspects.
 
-*  '''Utilisez l'[[Om2008.8_Installer|installeur]]''' pour trouver les applications et les modifications pour votre your Neo.
+*  '''Utilisez l'[[Om2008.8_Installer|installeur]]''' pour trouver les applications et les modifications pour votre Neo.
 *  '''Ajustez les thèmes''' en personnalisant vos propres fichiers [[Edje]].
 *  Les '''Codes source''' sont disponibles au public, permettant la personnalisation à toutes les couches logicielles, même le plus bas niveau.
 
@@ -49,7 +49,7 @@ Peu importe le chemin, vous créez à votre image. C'est à votre sujet.
 * Partagez vos ([[Om2008.8_Locations|Locations]]) :
 Vous pouvez utiliser '''Locations''' pour sauvegarder vos endroits préférés et éventuellement les envoyer à vos amis par SMS.  N'est-ce pas cool ?!
 * Partagez vos applications (cf. [[Om2008.8_Installer|Installeur]])
-:Partagez vos idées à travers le monde en ajoutant des packages au [http://wiki.openmoko.org/wiki/CommunityRepository répository communautaire].  Il s'agit d'une grosse base de donnée pour tous les projets openmoko et peut être accessible aisément à tout utilisateur par l'intermédiaire de l'[[Om2008.8 Installer|installeur]].
+:Partagez vos idées à travers le monde en ajoutant des packages au [http://wiki.openmoko.org/wiki/CommunityRepository dépôt communautaire].  Il s'agit d'une grosse base de données pour tous les projets openmoko et peut être accessible aisément à tout utilisateur par l'intermédiaire de l'[[Om2008.8 Installer|installeur]].
 
 === Guide Om 2008.8 ===
 Un guide pour connaître Om2008.8 : [[Om 2008.8 Guide]]
