--- a/Om_2008.8%2Ffr.mw
+++ b/Om_2008.8%2Ffr.mw
@@ -111,9 +111,9 @@ Cela devrait résoudre la majeure partie de vos soucis de réseau. Si vous avez 
 
 '''Utilisabilité'''
 
-* Le dialogue Pin par défaut ne montre que les lettres. Vous devez glisser vos doigts de haut en bas sur le clavier pour changer les caractères en nombre/lettres/spécial.
+* Le dialogue PIN par défaut ne montre que les lettres. Vous devez glisser vos doigts de haut en bas sur le clavier pour changer les caractères en chiffres/lettres/spécial.
 
-* L'installeur ne rend pas les droits administrateur, ce qui résulte en une impossibilité d'utiliser opkg. Solution : exécuter "killall packagekitd" (sur le freeRunner ou lorsque vous y êtes connectés en ssh).
+* L'installeur n'a pas les droits administrateur, ce qui résulte en une impossibilité d'utiliser opkg. Solution : exécuter "killall packagekitd" (sur le FreeRunner ou lorsque vous y êtes connectés en ssh).
 
 
 [[Category:Openmoko]]
