/* Some SIMs Don't Work */ 2100 3g possibility

--- a/Neo_FreeRunner_Hardware_Issues.mw
+++ b/Neo_FreeRunner_Hardware_Issues.mw
@@ -56,6 +56,8 @@ It is possible that there is more than one issue involved here. The observed pro
 
 * Defective SIMs, i.e. ones that do not comply with the applicable standards and are acknowledged as being defective by the carrier (even if they happen to work in some phones). 
 
+* You may have true 3G operating at 2100 and your sim doesn't fallback to GSM. The Phone works on 850/1800/1900 or 900/1800/1900.
+
 See also: 
 * http://wiki.openmoko.org/wiki/Carriers/ATT
 * http://wiki.openmoko.org/wiki/Carriers/Rogers
