Trac Ticket 666 applies also to GTO02

--- a/FreeRunner_unable_to_work_with_3G_SIM_cards.mw
+++ b/FreeRunner_unable_to_work_with_3G_SIM_cards.mw
@@ -7,7 +7,7 @@ See also: [[Freerunner_Hardware_Issues#Some_SIMs_Don.27t_Work|Freerunner Hardwar
 There is carrier page documented carriers compatibility [[Carriers]]
 
 === TRAC Ticket 666 ===
-TRAC ticket  [http://docs.openmoko.org/trac/ticket/666 666] applies to GTA01 (Neo 1973) and NOT to GTA02 (Neo Freerunner).
+TRAC ticket  [http://docs.openmoko.org/trac/ticket/666 666] applies to GTA01 (Neo 1973) and <strike>NOT</strike> to GTA02 (Neo Freerunner). Bug applies to both, see discussion.
 
 == Compatibility table (FreeRunner/GTA02)==
 
