--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -67,6 +67,9 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 | TI BluLink series (BT) || NA || NA || NA || NA
 |-
 |-
+| Broadcom BCM4325 (WLAN+BT+FM) || NA || NA || Good (Shawn Aug 13) || [http://www.broadcom.com/collateral/pb/4325-PB00-R.pdf]
+|-
+
 | NA || NA || NA || NA || NA
 |-
 |}
