minuscule m in Openmoko

--- a/BitBake_recipe.mw
+++ b/BitBake_recipe.mw
@@ -1,5 +1,5 @@
 == Bitbake ==
-BitBake is a build tool for executing tasks and managing metadata.It was inspired by Portage, the package management system used by the Gentoo Linux distribution. BitBake is the basis of the OpenEmbedded project, which is being used to build and maintain OpenMoko. 
+BitBake is a build tool for executing tasks and managing metadata.It was inspired by Portage, the package management system used by the Gentoo Linux distribution. BitBake is the basis of the OpenEmbedded project, which is being used to build and maintain Openmoko. 
 
 For the user guide of Bitbake, please visit the site : [http://bitbake.berlios.de/manual/] 
 
