--- a/Manual_Debian.mw
+++ b/Manual_Debian.mw
@@ -26,6 +26,7 @@ This kernel was build by Marcel_M and has some important patches in it such as r
  wget http://rabenfrost.net/celtune/uImage-2.6.24+svnr4194-r4165-r3-neo1973.bin
  ./dfu-util -d 0x1457:0x5119 -a kernel -R -D ./uImage-2.6.24+svnr4194-r4165-r3-neo1973.bin
 
+Question: is this kernel for Neo1973/GTA01 only? Is there a good/recommended kernel for Freerunner/GTA02?
 
 == (Optional) Recompiling Kernel to Add Drivers ==
 (Based on http://lists.openmoko.org/pipermail/support/2008-August/001240.html)
