--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -115,5 +115,7 @@ This should solve most off your moko side networking issues. If you need any oth
 
 There should be some official updates for 2008.8 setup soon, but in the meantime, you'll have to wait.
 
+There are *NO* updates available for 2008.08 anywhere on buildhost.openmoko.org - the daily-feeds directory is incompatible with 2008.08 and will corrupt your software configuration if you use it.
+
 [[Category:Openmoko]]
 [[Category:Om 2008.8]]
