--- a/Download.mw
+++ b/Download.mw
@@ -44,6 +44,12 @@ Latest stable [[Om 2008.8]] release: http://downloads.openmoko.org/releases/Om20
 
 === Neo FreeRunner ===
 
+'''Warning:''' (copied from here: [http://wiki.openmoko.org/wiki/Om_2008.8#Updates])
+
+There should be some official updates for 2008.8 setup soon, but in the meantime, you'll have to wait.
+
+There are *NO* updates available for 2008.08 anywhere on buildhost.openmoko.org - the daily-feeds directory is incompatible with 2008.08 and will corrupt your software configuration if you use it. 
+
 Daily builds: http://buildhost.openmoko.org/daily/freerunner/ 
 
 * Root FS files are like: Openmoko-'''openmoko-qtopia-x11'''-image-glibc-ipk-P1-Snapshot-YYYYMMDD-'''om-gta02.rootfs.tar.gz'''
