--- a/Download.mw
+++ b/Download.mw
@@ -42,13 +42,16 @@ For Neo FreeRunner images please scroll down on that link.
 
 Latest stable [[Om 2008.8]] release: http://downloads.openmoko.org/releases/Om2008.8/ (These images are for the Freerunner only).
 
-=== Neo FreeRunner ===
-
-'''Warning:''' (copied from here: [http://wiki.openmoko.org/wiki/Om_2008.8#Updates])
-
 There should be some official updates for 2008.8 setup soon, but in the meantime, you'll have to wait.
 
 There are *NO* updates available for 2008.08 anywhere on buildhost.openmoko.org - the daily-feeds directory is incompatible with 2008.08 and will corrupt your software configuration if you use it. 
+
+== buildhost.openmoko.org Images ==
+
+'''Warning:''' 
+'''This is not Om 2008.8 / ASU!'''
+
+=== Neo FreeRunner ===
 
 Daily builds: http://buildhost.openmoko.org/daily/freerunner/ 
 
