added note about #openmoko-cdevel

--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -108,7 +108,7 @@ Admin team has extra trac system: http://admin-trac.openmoko.org/trac/intertrac/
 
 === IRC ===
 
-There's a #openmoko channel on irc.freenode.net: irc://irc.freenode.net/openmoko
+There's a general channel '''#openmoko''' and a developer channel '''#openmoko-cdevel''' on irc.freenode.net: irc://irc.freenode.net/openmoko
 
 If you experience any build problems and need help from other developers, it is important that you share your complete output log. To share your output log, just paste it to [http://www.pastebin.ca/ pastebin] after submitting it, paste the resulting URL to the IRC channel.
 
@@ -153,7 +153,7 @@ The Subversion (svn) tree is laid out as follows:
 *** target
 **** ...
 * developers (private/experimental branches, created by individual developers)
-** laforge
+** werner
 *** ...
 ** sean
 ** mickey
@@ -184,7 +184,7 @@ The internal systems have the domain ''*.internal.openmoko.org''.
 
 === IRC ===
 
-The #openmoko-devel channel is for internal developers only, sorry.
+The '''#openmoko-devel''' channel is for internal developers only, sorry. Community developers are welcome at the public '''#openmoko-cdevel''' channel.
 
 == Local Community ==
 
