Updates: fixed "2008.08" -> "2008.8", added more visible note box formatting

--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -102,7 +102,6 @@ This is to be inserted below gateway address and above the bluetooth networking.
 
 This should solve most off your moko side networking issues. If you need any other help please refer to [[USB Networking]]
 
-
 {{note| [http://en.wikipedia.org/wiki/Resolvconf resolvconf] is installed so should probably be used }}
 
 * Usb-networking will not work until rebooted after initial boot.
@@ -115,7 +114,7 @@ This should solve most off your moko side networking issues. If you need any oth
 
 There should be some official updates for 2008.8 setup soon, but in the meantime, you'll have to wait.
 
-There are *NO* updates available for 2008.08 anywhere on buildhost.openmoko.org - the daily-feeds directory is incompatible with 2008.08 and will corrupt your software configuration if you use it.
+{{note|There are *NO* updates available for 2008.8 anywhere on buildhost.openmoko.org - the daily-feeds directory is incompatible with 2008.8 and will corrupt your software configuration if you use it.}}
 
 [[Category:Openmoko]]
 [[Category:Om 2008.8]]
