--- a/Navit.mw
+++ b/Navit.mw
@@ -21,8 +21,7 @@ Thanks to [[User:Alessandro | Alessandro]], stefan_schmidt, cp15 and all Navit d
 
 I got navit set up and configured to the point where it follows me on the map.  It doesn't have street names or any other information, just the map and the cursor showing the location and direction.  Here's what I did:
 * Install navit ipkg on NEO
-** Build using a local environment: make build-package-navit
-** <s>Download from [[User:Alessandro]] repo (http://aiurlano.netsons.org/OpenMoko/ipk/armv4t/)</s>
+ opkg install http://www.mikeasoft.com/~mike/ipk/armv4t/navit_0.0.4-r0_armv4t.ipk 
 * Set up your local maps
 ** Openstreetmap - follow directions at http://wiki.navit-project.org/index.php/OpenStreetMaps
 ** Here's an example of what I did to get the maps for the area around Seattle, Wa where I live:
@@ -33,19 +32,18 @@ I got navit set up and configured to the point where it follows me on the map.  
  wget -O map3.osm http://www.openstreetmap.org/api/0.5/map?bbox=-122.4,47.3,-122.2,47.5
  wget -O map4.osm http://www.openstreetmap.org/api/0.5/map?bbox=-122.2,47.3,-122,47.5
 *** Made a navit binary map file using the osm2navit binary that comes with the navit package on my linux box (it is also installing to the target from the .ipk)
- cat *.osm | bin/osm2navit --dedupe-ways > mymap.bin
+ cat *.osm | osm2navit --dedupe-ways mymap.bin
 
-(for me, the above command doesn't work.  This is what works for me:
-  cat *.osm | osm2navit --dedupe-ways mymap.bin
-)
+http://downloads.cloudmade.com/ also has up-to-date maps from OpenStreetMap by country.
 
 *** Copied the map to the NEO
  scp mymap.bin root@neo:/home/root/card/map
-*** Changed the navit.xml file on the NEO to use the new map
- vi /usr/share/navit/navit.xml
+*** Change the navit.xml file on the NEO to use the new map
+ cp /usr/share/navit/navit.xml ~/.navit/navit.xml
+ vi ~/.navit/navit.xml
  <map type="binfile" enabled="yes" data="/home/root/card/map/mymap.bin" />
 * Run navit
-** Start gllin
+** Start gllin (for GTA01)
 ** Start gpsd ( gpsd /tmp/nmeaNP )
 ** Start navit
 
