--- a/Navit.mw
+++ b/Navit.mw
@@ -56,10 +56,11 @@ They are now displayed on OpenMoko using the CVS version of Navit (20071217).
 Easier using the CVS version (20071217). 
 
 === Route > Destination ===
-The Route > Destination menu item crashes the software (20071217). 
+The Route > Destination menu item crashes the software (20071217 and 0.04). 
 
 A current fix is to set the LANG variable before calling navit. For example:
-export LANG=fr_FR.UTF-8; navit
+
+LANG=fr_FR.UTF-8 navit
 
 Note that a short syntax (e.g. LANG=fr) would not work.
 
