--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -266,6 +266,7 @@ A navigation wheel like on a sony/ericsson 810i would be nice.
 
 ===Proximity Sensor===
 Switch off backlight when you place the phone to your ear. Prevent accidental activation of speakerphone or other sounds when the phone is near the ear (prevent hearing damage). Possibly switch the speakerphone on or off automatically depending on if the phone is by your head or not.
+:Automatically turning the speakerphone on/off sounds good, but to avoid disturbing others, for example in public, turning it on could be delayed so for example short looking at the display or putting it to the other ear doesn’t activate it. Additionally/alternatively the delay could be combined with/replaced by a orientation (or motion) sensor, so that it’s not activated when holding it upright, but only when it’s lying e. g. on a table.
 
 === Make ''all'' unlocking of phone, password protected===
 
