Note on crashes with the old keyboard files.

--- a/Om_2008_keyboard.mw
+++ b/Om_2008_keyboard.mw
@@ -58,5 +58,7 @@ Most applications should bring up the keyboard automatically when keyboard input
 * restart x: /etc/init.d/xserver-nodm restart
 * enjoy the full qwerty keyboard
 
+If you have problems with illume crashing, make sure that you don't have a copy of the original ASU Default.kbd file laying around (the one with the predictive dictionary).
+
 [[Category:Om 2008.8]]
 [[Category:Guides|Keyboard Om 2008.8]]
