/* Download: deadlink and howto make own ipk */

--- a/Gutenflash.mw
+++ b/Gutenflash.mw
@@ -14,10 +14,17 @@ GutenFlash expects UTF-8 files. So for reading a file originally in iso-8859-1, 
  iconv -f iso-8859-1 Reveries.txt -t utf-8 > Reveries.utf8
 
 == Download ==
-Current mokoified version (ipk package):
+
+DeadLink: Current mokoified version (ipk package):
 http://oralux.net/gutenflash/
 
 Original website: http://toykeeper.net/programs/flash/
+
+Make ipk:
+ *download snapshot from http://toykeeper.net/programs/flash/files/
+ *cd to ipk-folder
+ *make
+ *scp file to your phone
 
 
 [[Image:Gutenflash.png]]
