--- a/Manual_Debian.mw
+++ b/Manual_Debian.mw
@@ -318,7 +318,7 @@ Install gpsd and an application like tangogps on Debian:
 
  (as root)
  apt-get install gpsd
- apt get install tangogps
+ apt-get install tangogps
 
 Unlike on OM 2008.8 the serial port for gps is not /dev/ttySAC1 but /dev/s3c2410_serial1. 
 The best way to set up gpsd on Debian is to use dpkg-reconfigure:
@@ -334,7 +334,6 @@ Test the serial connection to the GPS chip:
  (Finish testing with ctrl-c)
 Now you should be able to start tangogps from the X-mouse start menu:
  Start > other > GPS & Map
-
 
 =Official Debian Port=
 
