*Empty MediaWiki Message*

--- a/MokoMakefile.mw
+++ b/MokoMakefile.mw
@@ -53,7 +53,7 @@ Because there are bugs in the interaction of QEMU and GCC-4, you'll need a copy 
   # For qemu, install a second compiler for bug avoidance; MokoMakefile knows to look for it.
   sudo apt-get install gcc-3.4 g++-3.4 libsdl1.2-dev lynx netpbm dosfstools
 
-  # On Ubuntu 8.04, the following was required instead of cogito
+  # On Ubuntu 8.04 and and Debian testing/unstable, the following was required instead of cogito
   sudo apt-get install git-core
   # Ubuntu links /bin/sh to /bin/dash, but some scripts fail because they use pushd and popd, which dash does not support
   sudo rm /bin/sh
