/* Users in Switzerland */

--- a/Openmoko_Local_Groups:_Switzerland.mw
+++ b/Openmoko_Local_Groups:_Switzerland.mw
@@ -55,5 +55,6 @@ Website: http://www.jesc.ch/openmoko
 *[[User:Tuxfux.ch|Tuxfux.ch]]
 *[[User:claude-elrond740|claude-elrond740]]
 *[[User:DrYak|DrYak]]
+*[[User:bernulli|bernulli]]
 
 [[Category:Openmoko Local Groups]]
