--- a/Navit.mw
+++ b/Navit.mw
@@ -21,7 +21,11 @@ Thanks to [[User:Alessandro | Alessandro]], stefan_schmidt, cp15 and all Navit d
 
 I got navit set up and configured to the point where it follows me on the map.  It doesn't have street names or any other information, just the map and the cursor showing the location and direction.  Here's what I did:
 * Install navit ipkg on NEO
- opkg install http://www.mikeasoft.com/~mike/ipk/armv4t/navit_0.0.4-r0_armv4t.ipk 
+ opkg install http://www.mikeasoft.com/~mike/ipk/armv4t/navit_0.0.4-r0_armv4t.ipk
+* Or roll your own from svn using the toolchain (having checked out trunk in the navit directory, and assuming you have written navit_control):
+ . /usr/local/openmoko/arm/setup-env
+ om-conf navit --disable-samplemap
+ om-make-ipkg navit navit_control
 * Set up your local maps
 ** Openstreetmap - follow directions at http://wiki.navit-project.org/index.php/OpenStreetMaps
 ** Here's an example of what I did to get the maps for the area around Seattle, Wa where I live:
@@ -46,6 +50,8 @@ http://downloads.cloudmade.com/ also has up-to-date maps from OpenStreetMap by c
 ** Start gllin (for GTA01)
 ** Start gpsd ( gpsd /tmp/nmeaNP )
 ** Start navit
+
+* The version of osm2navit with which you build the maps should match the version of navit you have. If in doubt, build the maps on the OpenMoko.
 
 == News ==
 
