--- a/Users_Repositories.mw
+++ b/Users_Repositories.mw
@@ -82,6 +82,10 @@ Use the following line to add celtune's feed to your neo:
 kd8ikt's rare finds/builds <br>
 http://we.trekbeyond.org/~kd8ikt/moko/buildz/repo/kd8ikt.conf<br>
 
+===FSO===
+Daily builds of the freesmartphone.org distribution can be found at:<br>
+http://totalueberwachung.de/~alphaone/openembedded-build/glibc/images/neo1973/<br>
+
 ===Note===
 If you want to add a link, it would be nice to enforce a standard format of these feeds so that they can be browsed automatically.
 
