/* Some APN names for reference */

--- a/Manually_using_GPRS.mw
+++ b/Manually_using_GPRS.mw
@@ -261,7 +261,7 @@ fido
 |-
 | USA || AT&T || Unlimited data plan (attached to pay-as-you-go voice plan) || wap.cingular / *99***1# || WAP@CINGULARGPRS.COM/CINGULAR1 ||
 |-
-| USA || || Cincinnati Bell Wireless || wap.gocbw.com ||  cbw  ||
+| USA || Cincinnati Bell Wireless || || wap.gocbw.com ||  cbw  ||
 |-
 | USA || Cingular (AT&T) || Less than full internet || wap.cingular / may require *99***1# || ||
 |-
