--- a/MokoMakefile.mw
+++ b/MokoMakefile.mw
@@ -173,7 +173,7 @@ If you have chronic build problems, cleaning your environment variables and re-r
 Note that on some boxes it is necessary to call "make" by typing "/usr/bin/make" afterwards.
 
 
-On current Ubuntu boxes another trick is necessary:
+On current Ubuntu/Debian unstable/testing boxes another trick is necessary:
 glibc_2.6.1 fails to build since it is unable to generate the necessary locales until you type in the following line:
  sudo sysctl -w vm.mmap_min_addr=0
 Note that this temporarily disables a new security vulnerability check that has entered /etc/sysctrl - but that makes problems with loads of applications.
