--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -69,7 +69,7 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 |-
 | Broadcom BCM4325 (WLAN+BT+FM) || NA || NA || Good (Shawn Aug 13) || [http://www.broadcom.com/collateral/pb/4325-PB00-R.pdf]
 |-
-| NXP Nexperia system solution 9100 || The introduction indicates it runs open OS || NA || NA || [http://www.nxp.com/acrobat_download/literature/9397/75014596.pdf]
+| NXP Nexperia system solution 9100 || The introduction indicates it runs open OS || NA || Highly integration solution || [http://www.nxp.com/acrobat_download/literature/9397/75014596.pdf]
 |-
 | NA || NA || NA || NA || NA
 |-
