*Empty MediaWiki Message*

--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -61,7 +61,8 @@ Edit the USB section to look like this:
  	up echo nameserver 208.67.220.220 >/etc/resolv.conf 
  	#up echo nameserver 192.168.0.200 >/etc/resolv.conf
 
-After you have made those changes restart your phone.
+Now edit the Multiverse repository (/etc/opkg/Multiverse-feed.conf) to fix a typo: Remove the duplicate "/" before Multiverse. (Restart your phone)
+
 
 Now that you are able to install software, It is a good time to install "illume-config" to can gain access to more advanced power management features and to change the look of the GUI through the wrench that will now appear in the top bar. (Restart your phone)
 
@@ -69,6 +70,7 @@ Now that you are able to install software, It is a good time to install "illume-
 
 ''' Bugs/Fixes '''
 
+*The Media Player is basically unusable because of the skin.
 *Battery meter always says its charging. Installing a terminal and running "apm" will display the proper battery status.
 
 *Your phone will go into standby after 30 seconds EVEN when connected to your computer or wall charger. (Disable this under the settings menu)
