*Empty MediaWiki Message*

--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -66,6 +66,12 @@ Now edit the Multiverse repository (/etc/opkg/Multiverse-feed.conf) to fix a typ
 
 Now that you are able to install software, It is a good time to install "illume-config" to can gain access to more advanced power management features and to change the look of the GUI through the wrench that will now appear in the top bar. (Restart your phone)
 
+The Media Player is basically useless due to the default theme. To install with a better theme run:
+
+ opkg install openmoko-mediaplayer2
+ wget http://abraxa.dyndns.org:81/random/openmoko-mediaplayer-theme.tar.bz2
+ tar xjf openmoko-mediaplayer-theme.tar.bz2 -C /usr/share/themes/Moko/gtk-2.0
+ rm openmoko-mediaplayer-theme.tar.bz2
 
 
 ''' Bugs/Fixes '''
